Zadanie 3/tests/funs8.expected
Error: Variable 'a' already declared: line 4
Error: Variable 'a' already declared: line 16
