Zadanie 3/tests/funs8.actual
Visiting program
Argument a already defined. Line: 4
Type checking finished
